[gd_scene load_steps=14 format=1]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/background_gradient.tex" type="Texture" id=2]
[ext_resource path="res://assets/textures/background_pattern.tex" type="Texture" id=3]
[ext_resource path="res://assets/textures/frame.tex" type="Texture" id=4]
[ext_resource path="res://assets/fonts/chunq_85.fnt" type="BitmapFont" id=5]
[ext_resource path="res://assets/textures/btn_close_normal.tex" type="Texture" id=6]
[ext_resource path="res://assets/textures/btn_close_pressed.tex" type="Texture" id=7]
[ext_resource path="res://scenes/character.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/obstacle_spawner.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/music/trance.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/textures/instructions.tex" type="Texture" id=11]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( 0, 1480, 460, 1420, 1020, 1540, 1120, 1840, 400, 1940, -280, 1860 )

[sub_resource type="Animation" id=2]

resource/name = "music_fade_out"
length = 2.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("stream_player:stream/volume_db")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 2.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, -80.0 ] }

[node name="game" type="Node"]

process/pause_mode = 2
script/script = ExtResource( 1 )

[node name="background" type="CanvasLayer" parent="."]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="texture" type="TextureFrame" parent="background"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="parallax_background" type="ParallaxBackground" parent="."]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="parallax_background"]

motion/scale = Vector2( 1, 0.5 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 1925 )

[node name="texture" type="TextureFrame" parent="parallax_background/ParallaxLayer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1080.0
margin/bottom = 1925.0
texture = ExtResource( 3 )
stretch_mode = 0

[node name="hud" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="frame" type="StaticBody2D" parent="hud"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="texture" type="TextureFrame" parent="hud/frame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1080.0
margin/bottom = 1920.0
texture = ExtResource( 4 )
stretch_mode = 0

[node name="score" type="Label" parent="hud"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 60.0
margin/top = 29.0
margin/right = 494.0
margin/bottom = 130.0
custom_fonts/font = ExtResource( 5 )
text = "0"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btn_close" type="TextureButton" parent="hud"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 934.0
margin/top = 20.0
margin/right = 1035.0
margin/bottom = 128.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )

[node name="character" parent="." instance=ExtResource( 8 )]

transform/pos = Vector2( 540, 1050 )

[node name="camera" type="Camera2D" parent="."]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="obstacle_spawner" parent="." instance=ExtResource( 9 )]

transform/pos = Vector2( 0, -160 )

[node name="obstacle_container" type="Node2D" parent="."]

[node name="stream_player" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 10 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="TextureFrame" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 180.0
margin/top = 1160.0
margin/right = 930.0
margin/bottom = 1755.0
texture = ExtResource( 11 )
stretch_mode = 0

[node name="anim_player" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/music_fade_out = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="pressed" from="hud/btn_close" to="." method="_on_btn_close_pressed"]


